--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 <script>
     let navbar = document.querySelector('.head .navbar');
     let menu = document.querySelector('#menu');
+    // hello
 
     menu.onclick = () => {
         navbar.classList.toggle('active');
