feat:budget section

--- a/Services.html
+++ b/Services.html
@@ -23,7 +23,9 @@
             <a href="price.html">price</a>
             <a href="Events.html">Events</a>
             <a href="review.html">review</a>
+            <a href="budget.html">Budget Calculator</a>
             <a href="contact.html">contact</a>
+
         </nav>
     </header>
 
@@ -38,9 +40,10 @@
                     alt="">
             </div>
             <div class="swiper-slide">Marriage Reception<img
-                    src="https://i.pinimg.com/474x/3f/4c/e4/3f4ce4265b717aacce9b6b8378018292.jpg" alt=""></div>
+                    src="https://5.imimg.com/data5/SELLER/Default/2024/5/418913966/FY/PW/EL/129952027/wedding-reception-stage-decorations.jpg"
+                    alt=""></div>
             <div class="swiper-slide">fashion Event<img
-                    src="https://thumbs.dreamstime.com/z/blue-runway-golden-decor-event-stage-fashion-show-spotlight-lighting-dramatic-accents-bathed-spotlights-perfect-379520974.jpg"
+                    src="https://static.wixstatic.com/media/4a1094_f3247df763f341c38e7bf895f2d08611~mv2.png/v1/fill/w_1000,h_934,al_c,q_90/4a1094_f3247df763f341c38e7bf895f2d08611~mv2.png"
                     alt=""></div>
             <div class="swiper-slide">Birthday Decor<img
                     src="https://borntoparty.in/img/what-we-do/birthday-event-planner.jpg" alt=""></div>
@@ -52,6 +55,8 @@
                     alt=""></div>
         </div>
     </section>
+
+
     <!------------------footer-------------------------------------->
     <div class="cont-container">
         <div class="f-container">
