--- a/about.html
+++ b/about.html
@@ -23,7 +23,9 @@
             <a href="price.html">price</a>
             <a href="Events.html">Events</a>
             <a href="review.html">review</a>
+            <a href="budget.html">Budget Calculator</a>
             <a href="contact.html">contact</a>
+
         </nav>
     </header>
 
@@ -47,6 +49,51 @@
             </div>
         </div>
 
+    </section>
+    <section class="timeline-section">
+        <h2 class="timeline-title">Our Event Story</h2>
+
+        <div class="timeline">
+
+            <div class="timeline-item">
+                <div class="timeline-content">
+                    <h3>1. Your Dream Begins</h3>
+                    <p>Every memorable event starts with your ideas, inspirations and vision. We listen and understand
+                        your story.</p>
+                </div>
+            </div>
+
+            <div class="timeline-item right">
+                <div class="timeline-content">
+                    <h3>2. Planning & Designing</h3>
+                    <p>We create a full event blueprint — theme, décor, budget, timeline — everything planned with
+                        perfection.</p>
+                </div>
+            </div>
+
+            <div class="timeline-item">
+                <div class="timeline-content">
+                    <h3>3. Décor & Setup</h3>
+                    <p>Our team transforms the venue with stunning decorations, lights, and elegant arrangements.</p>
+                </div>
+            </div>
+
+            <div class="timeline-item right">
+                <div class="timeline-content">
+                    <h3>4. The Grand Celebration</h3>
+                    <p>On the big day, we execute everything smoothly — guest coordination, stage management, catering &
+                        more.</p>
+                </div>
+            </div>
+
+            <div class="timeline-item">
+                <div class="timeline-content">
+                    <h3>5. Memories Captured</h3>
+                    <p>We capture your beautiful moments so the joy lasts forever — photography, videography & more.</p>
+                </div>
+            </div>
+
+        </div>
     </section>
     <!------------------footer-------------------------------------->
     <div class="cont-container">
