--- a/price.html
+++ b/price.html
@@ -23,8 +23,10 @@
             <a href="price.html">price</a>
             <a href="Events.html">Events</a>
             <a href="review.html">review</a>
+            <a href="budget.html">Budget Calculator</a>
             <a href="contact.html">contact</a>
         </nav>
+
     </header>
 
     <section class="price" id="price">
@@ -32,8 +34,8 @@
         <div class="price-container">
             <div class="price-box">
                 <h3 class="package">Basic Package</h3>
-                <h3 class="amount">$3500</h3>
-                <p><i class="fa-solid fa-square-check"></i>Basic Decoration(balloons,banners,<br>backdrop)</p>
+                <h3 class="amount">₹5,000</h3>
+                <p><i class="fa-solid fa-square-check"></i>Basic Decoration(balloons,<br>banners,backdrop)</p>
                 <p><i class="fa-solid fa-square-check"></i>Simple stage setup</p>
                 <p><i class="fa-solid fa-square-check"></i>Music system(basic)</p>
                 <p><i class="fa-solid fa-square-check"></i>1 event coordinator</p>
@@ -42,7 +44,7 @@
             </div>
             <div class="price-box">
                 <h3 class="package">Standard Package </h3>
-                <h3 class="amount">$4500</h3>
+                <h3 class="amount">₹20,000</h3>
                 <p><i class="fa-solid fa-square-check"></i>Theme-based decoration</p>
                 <p><i class="fa-solid fa-square-check"></i>Stage with lighting</p>
                 <p><i class="fa-solid fa-square-check"></i>Professional sound system</p>
@@ -53,7 +55,7 @@
             </div>
             <div class="price-box">
                 <h3 class="package">Premium Package </h3>
-                <h3 class="amount">$6500</h3>
+                <h3 class="amount">₹40,000</h3>
                 <p><i class="fa-solid fa-square-check"></i>Premium Theme decor(flowers,entrance arch,<br>LED backdrop)
                 </p>
                 <p><i class="fa-solid fa-square-check"></i>HD sound+DJ</p>
@@ -66,7 +68,7 @@
             </div>
             <div class="price-box">
                 <h3 class="package"> Luxury Grand Package</h3>
-                <h3 class="amount">$8500</h3>
+                <h3 class="amount">₹80,000</h3>
                 <p><i class="fa-solid fa-square-check"></i>Full luxury customized decoration</p>
                 <p><i class="fa-solid fa-square-check"></i>LED wall,moving lights,truss setup</p>
                 <p><i class="fa-solid fa-square-check"></i>Professional DJ+live music</p>
