--- a/review.html
+++ b/review.html
@@ -23,7 +23,9 @@
             <a href="price.html">price</a>
             <a href="Events.html">Events</a>
             <a href="review.html">review</a>
+            <a href="budget.html">Budget Calculator</a>
             <a href="contact.html">contact</a>
+
         </nav>
     </header>
 
