--- a/budget.html
+++ b/budget.html
@@ -58,6 +58,10 @@
             <div id="result"></div>
         </div>
     </section>
+    <div class="copyright">
+        <p>Copyright &copy;2024 All Rights Reserved | Knowledge Place KP </p>
+        <a href="#home"><i class="fa-solid fa-circle-arrow-up"></i></a>
+    </div>
 
 
     <script>
